--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -6,7 +6,11 @@
 <div class="row">
   <ul>
   {% for student in object_list %}
-    <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
+    <li>Студент: {{ student.name }}   Группа: {{ student.group }}
+      {% for teacher in student.teachers.all %}
+      <br> Преподаватель: {{ teacher.name }} Предмет: {{ teacher.subject }}
+      {% endfor %}
+    </li>
   {% endfor %}
   </ul>
 </div>
